[project]
name = "quipubase"
version = "0.0.1"
description = "Quipubase client for python"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "quipubase", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
